--- a/css/home.less
+++ b/css/home.less
@@ -2,7 +2,10 @@
     .item-title {
         width: 0.5rem;
         transform: scale(0.8);
-    } 
+    }
+    // body{
+    //     transform: scale(0.8);
+    // }
 }
 
 .home-top{//顶部布局
@@ -21,7 +24,7 @@
         border:1px solid rgba(241, 241, 241, 0.5);
         box-shadow:0px 5px 5px 0px rgba(9,2,4,0.2);
         background:linear-gradient(0deg,rgba(249,249,249,1),rgba(254,254,254,1),rgba(242,242,242,1));
-        border-radius: 0.12rem;
+        border-radius: 0.1rem;
         position: relative;
         top: -0.15rem;
         background-color: #fff; 
@@ -51,8 +54,7 @@
     .headline{
         height: 0.16rem;
         .more{
-            font-size: 0.08rem;
-            
+            font-size: 0.08rem; 
         }
     }
 }
