--- a/css/base.less
+++ b/css/base.less
@@ -2,11 +2,27 @@ body{
     // background-color: var(--weui-BG-0); 
     background-color: #fff;
     font-family:Microsoft YaHei, Arial, Helvetica, sans-serif;
-    color: #333333;
+    color: #333333; 
 }
 .main{
     width: 2.9rem;
     margin: 0 auto; 
+}
+.titleNav{//标题
+    height: 0.16rem;
+    margin: 0.16rem 0 0.13rem 0;
+    .more{
+        font-size: 0.12rem; 
+        line-height: 0.12rem;
+        .arrows{
+            width: 0.06rem;
+            height: 0.15rem;
+            padding-left: 0.06rem;
+            img{
+                width: 100%;
+            }
+        }
+    }
 }
 // 布局
 .fl{
@@ -79,6 +95,7 @@ body{
 
 .v-line{ 
     width: 0.05rem;
+    min-height: 0.13rem;
     height: 100%;
     background:rgba(255,102,51,1);
     border-radius: 0.025rem;  
