--- a/css/home.less
+++ b/css/home.less
@@ -49,23 +49,8 @@
     
 }
 
-.home-main{ 
-    .titleNav{
-        height: 0.16rem;
-        margin: 0.16rem 0;
-        .more{
-            font-size: 0.12rem; 
-            line-height: 0.12rem;
-            .arrows{
-                width: 0.06rem;
-                height: 0.15rem;
-                padding-left: 0.06rem;
-                img{
-                    width: 100%;
-                }
-            }
-        }
-    }
+.home-main{  
+    .first-top{margin-top: 0.02rem !important;} 
     .video-box{
         .video-item{
             width: 1.37rem;
@@ -73,6 +58,7 @@
             border-radius:0.05rem; 
             video{
                 width: 100%;
+                height: 100%;
             }
         }
         .video-des{
