历史记录详情

--- a/css/apply.less
+++ b/css/apply.less
@@ -1,7 +1,7 @@
 body{
     background-color: #FAFAFA;
 }
-.apply-history-box{
+.apply-history-box{//历史列表
     .title-apply{ 
         color: #000000;
         font-size: 0.13rem;
@@ -32,5 +32,19 @@ body{
                 height: 0.1rem;
             }
         }
+    }
+}
+.apply-history-info-box{//列表详情
+   padding: 0.17rem 0.23rem; 
+    .history-list-info{  
+        height: 0.34rem;
+        margin-bottom: 0.03rem;
+        padding: 0 0.11rem 0 0.13rem;
+        background-color: #fff;
+        font-size: 0.1rem;
+        
+        >div:last-of-type{
+            color: #999999;
+        } 
     }
 }
