我的消息样式

--- a/css/apply.less
+++ b/css/apply.less
@@ -26,11 +26,21 @@ body{
             }
         }
         .right{
+            position: relative;
             width: 0.06rem;
             img{
                 width: 100%;
                 height: 0.1rem;
             }
+        }
+        .cir{
+            content: '';
+            position: absolute;
+            width: 0.05rem;
+            height: 0.05rem;
+            border-radius: 50%;
+            left: -0.15rem;
+            background-color: #FF3300;
         }
     }
 }
