--- a/css/apply.less
+++ b/css/apply.less
@@ -55,6 +55,26 @@ body{
         
         >div:last-of-type{
             color: #999999;
+           input{
+             text-align: right;
+             font-size: 0.1rem;
+           }
+           .uload{
+                width: 0.64rem;
+                height: 0.26rem;
+                border-radius: 0.13rem;
+                background-color: #fff;
+                border: .01rem solid #006fff;
+                text-align: center;
+                line-height: 0.26rem;
+                font-size: 0.1rem;
+                color: #006fff;
+                position: relative;
+                input{
+                    width: 100%;
+                    height: 100%;
+                }
+           }
         } 
-    }
+    }   
 }
