--- a/css/base.less
+++ b/css/base.less
@@ -3,6 +3,8 @@ body{
     background-color: #fff;
     font-family:Microsoft YaHei, Arial, Helvetica, sans-serif;
     color: #333333; 
+    padding: 0;
+    margin: 0; 
 }
 .main{
     width: 2.9rem;
