个人信息页

--- a/css/userInfo.less
+++ b/css/userInfo.less
@@ -1,4 +1,9 @@
 // 1.7
+.page{
+    background-color: #FAFAFA;
+    box-sizing: border-box;
+    padding-bottom: 0.17rem;
+}
 img{
     width: 100%;
 }
@@ -63,6 +68,23 @@ img{
             width: 1.37rem;
             height: 0.64rem;
             border-radius: 0.1rem; 
+        }
+    }
+    .user-data-box{
+        padding: 0 0.23rem;
+        .user-data{ 
+            height: 0.34rem;
+            margin-bottom: 0.03rem;
+            padding: 0 0.11rem 0 0.13rem;
+            background-color: #fff;
+            font-size: 0.1rem;
+            >div:last-of-type{
+                color: #999999;
+                 .img{
+                    width: 0.06rem;
+                    height: 0.1rem; 
+                 }
+            }
         }
     }
 }
